# pd2_shader_patcher

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.h  compiler.h  file.h  lookup8.h  patcher.h  shaderpack.h  xml.h
lib/: sblt_plugin.lib  superblt_flat.h
modsrc/: mod.txt  shadermod.xml  supermod.xml
modsrc/shaders/: custom_dof.pixel.hlsl  custom_dof.vertex.hlsl
src/: buffer.cpp  file.cpp  legal.cpp  lookup8.cpp  main.cpp  xml.cpp
src/shaders/: compiler.cpp  patcher.cpp  shaderpack.cpp
